# spec-t20r

./: .gitignore  LICENSE.md  README.adoc  README.md  ReleaseNotes.md  Zero_Trust_Übersicht.drawio  pod-rs-vsdm2-deployment-646b6cf478-vtrdn.yaml  pod-rs-vsdm2-deployment-6569fb55c5-9jxpx.yaml
.github/: renovate.json
.github/workflows/: automatic_image_genration.yml  generate_images.yaml  manually_generate_images.yml  renovate.yml  trivy.yml
components/Monitoring/: README.md
components/ZETA-Guard/: README.md  kind-config-zeta-guard.yaml  next-steps.sh  setup.sh
components/ZETA_Guard/: README.md  build.sh  forwardports.sh  kind-config-zeta-guard.yaml  kind-config-zg-vsdm2.yaml  setup.sh
components/fastapi-pip-pap/: Dockerfile  README.adoc  config.yaml  docker-compose.yml  fastapi-pip-pap.py  requirements.txt
components/gemini-pip-pap/: README.adoc  console  docker-compose.yml  gemini-pip-pap.py  pyproject.toml
components/pip-pap-service/: README.adoc
components/pip-pap-service/src/: Dockerfile  Makefile  bundle.tar.  config.yaml  docker-compose.yml  nginx.conf  pip-pap-service.py  pyproject.toml  requirements.txt  uwsgi.yaml
components/zeta_guard_otel/: README.md
docs/: CI_CD_Concept.adoc  Desktop_CLient_für_Versicherte.md  EU-Wallet.md  Web-Applikation_LEI_Versicherte.md  ZT_Cluster_Betrieb_mit_GitOps.md  authorization_server_api.md  client-registration-and-oauth-2-authorization-code-flow.md  pip_und_pap_service_api.md  tpm-attestation-und-token-exchange.md  tpm_und_trust_client_anforderungen.md  zero-trust-api.md  zero_trust_api.md  zeta-api.md
(+199 files in other folders)
