[tool.poetry]
name = "gemini-pip-pap"
version = "0.1.0"
description = "Zero Trust PIP and PAP Service for retrieving OPA bundles"
authors = ["gem-cp <christian.plagens@gematik.de>"]
license = "Apache 2.0"
readme = "README.adoc"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
typing = "^3.10.0.0"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
