[tool.poetry]
name = "pip-pap-service"
version = "0.1.0"
description = "Sample implementation of PIP/PAP API"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.2"
pyyaml = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pip-pap-service = "pip_pap_service:main"
